--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "pinia": "^2.0.34",
         "vue": "^3.2.36",
-        "vue-router": "^4.1.6"
+        "vue-router": "^4.1.6",
+        "pinia-plugin-persistedstate": "^3.1.0"
     }
 }
